# INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)

PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER api.proto)
ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})

target_link_libraries(proto PUBLIC protobuf::libprotobuf)
# INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
# message(STATUS "CMAKE_CURRENT_SOURCE_DIR = ${CMAKE_CURRENT_SOURCE_DIR}")
target_include_directories(proto PUBLIC ${Protobuf_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})